# pocket-readlex

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build-lib-cargo.sh  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/uk/co/busydoingnothing/pocketrl/: ArticleActivity.java  BinaryReader.java  BitReader.java  Compiledb.java  ContextMenuSearchActivity.java  PartOfSpeech.java  SearchActivity.java  SearchAdapter.java  SearchResult.java  StartActivity.java  Transliterater.java  TransliterationActivity.java  Trie.java  TrieCache.java  Utf8.java  Variant.java  VariantView.java
app/src/main/res/drawable/: entry_border.xml  transliterate.xml
app/src/main/res/font/: notosans_latin_shavian.xml
app/src/main/res/layout/: about_view.xml  article.xml  article_entry.xml  first_variant_entry.xml  search.xml  search_item.xml  transliteration.xml  variant_entry.xml  variant_separator.xml
app/src/main/res/menu/: search_menu.xml  transliteration_menu.xml  variant_menu.xml
app/src/main/res/values/: strings.xml  styles.xml
compiledb/: Cargo.toml
compiledb/src/: bit_reader.rs  bit_writer.rs  compiledb.rs  dictionary.rs  dump_dictionary.rs  lib.rs  main.rs  parts_of_speech.rs  shavian.rs  transliterate.rs  transliteration.rs  trie_builder.rs
compiledb/src/jni_wrapper/: char_sequence_iter.rs  char_tools.rs  dictionary.rs  mod.rs  transliteration.rs
compiledb/src/parts_of_speech/: pos_table.rs
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
scripts/: make-pos-table.py
