[package]
name = "compiledb"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A utility to compile the data for Pocket Readlex"
repository = "https://github.com/bpeel/pocket-readlex"
default-run = "compiledb"

[[bin]]
name = "compiledb"
path = "src/compiledb.rs"

[[bin]]
name = "dump-dictionary"
path = "src/dump_dictionary.rs"

[[bin]]
name = "transliterate"
path = "src/transliterate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
